germany teaser and launch responsivness complete

--- a/src/de-de.html
+++ b/src/de-de.html
@@ -39,7 +39,7 @@
       <div class="custom-container">
         <!-- logo -->
         <div>
-          <div class="flex justify-center lg:mt-6 bronzo-logo">
+          <div class="flex justify-center mt-6 bronzo-logo">
             <img src="./assets/images/Al-Bronzo.png" class="w-44 h-auto" />
           </div>
         </div>
@@ -48,14 +48,14 @@
         <div class="flex flex-col justify-center mt-9">
           <!-- translation key 1 -->
           <h1
-            class="w-[328px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
+            class="w-[300px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
           >
             EINE PASTA, DIE SAUCE LIEBT - FÜR ALLE, DIE PASTA LIEBEN
           </h1>
 
           <!-- translation key 2 -->
           <p
-            class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-5"
+            class="w-[320px] md:w-[440px] lg:w-[550px] mx-auto lg:text-2xl text-center pt-5"
           >
             Barilla Al Bronzo nimmt die Sauce bis zum letzten Tropfen auf, für
             ein außergewöhnliches Geschmackserlebnis.
@@ -82,13 +82,15 @@
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="custom-container">
         <!-- translation key 3 -->
-        <h1 class="w-full mx-auto text-center uppercase">
+        <h1
+          class="w-[310px] md:w-[400px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+        >
           Italienische Tradition trifft auf Innovation
         </h1>
 
         <!-- translation key 4 -->
         <p
-          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] md:w-[500px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die neue 500g Packung im edlen Design hebt die besondere Qualität von
           Barilla Al Bronzo hervor und unterstreicht die perfekte Saucenhaftung.
@@ -117,28 +119,33 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[15%] lg:h-[20%] -top-[110px] md:-top-[100px] lg:-top-[160px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
-      <div class="custom-container pt-4 pb-10">
+      <div class="custom-container pt-6 pb-10">
         <!-- translation key 5 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           Perfekte Saucenhaftung
         </h1>
 
         <!-- translation key 6 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[380px] md:w-[500px] lg:w-[700px] xl:w-[680px] lg:text-2xl mx-auto text-center pt-5"
         >
           Unsere Barilla Al Bronzo Pasta wird dank jahrzehnte langer Erfahrung
           mit unserem exklusiven Bronze-Verfahren hergestellt. Dadurch erhält
           sie eine charakteristisch raue Oberfläche, die jeden Tropfen Sauce
-          perfekt aufnimmt. Die sorgfältig ausgewählte, hochwertige
-          Hartweizenmischung verleiht unserer Al Bronzo Pasta den vollmundigen
-          Geschmack.
+          perfekt aufnimmt.
+        </p>
+
+        <p
+          class="w-[320px] sm:w-[380px] md:w-[500px] lg:w-[700px] xl:w-[680px] lg:text-2xl mx-auto text-center pt-5"
+        >
+          Die sorgfältig ausgewählte, hochwertige Hartweizenmischung verleiht
+          unserer Al Bronzo Pasta den vollmundigen Geschmack.
         </p>
 
         <!-- cards -->
@@ -302,7 +309,7 @@
       <!-- Content -->
       <!-- translation key 13 -->
       <p
-        class="relative w-[312px] md:w-[400px] lg:w-[460px] lg:text-2xl mx-auto text-center text-white z-10"
+        class="relative w-[330px] md:w-[440px] lg:w-[520px] lg:text-2xl mx-auto text-center text-white z-10"
       >
         Es ist unsere Auswahl an feinstem Hartweizen, die Barilla Al Bronzo den
         runden, leicht gerösteten Geschmack verleiht.
@@ -329,14 +336,14 @@
       <div class="relative z-10 text-white text-center">
         <!-- translation key 7 -->
         <h1
-          class="w-[260px] md:w-[370px] lg:w-[450px] xl:w-[550px] mx-auto text-center uppercase"
+          class="w-[300px] md:w-[370px] lg:w-[450px] xl:w-[650px] mx-auto text-center uppercase"
         >
           VERSCHIEDENE FORMEN FÜR JEDEN GESCHMACK
         </h1>
 
         <!-- translation key 8 -->
         <p
-          class="w-[312px] sm:w-[400px] md:w-[500px] lg:w-[600px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[400px] md:w-[510px] lg:w-[620px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die Pasta-Formen von Al Bronzo wurden von unseren Experten mit
           Sorgfalt kreiert für ein intensives gastronomisches Erlebnis zu Hause.
@@ -349,15 +356,13 @@
       <!-- img + text -->
       <div class="custom-container">
         <!-- translation key 9 -->
-        <h1
-          class="w-[328px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[328px] md:w-full mx-auto text-center uppercase">
           Intensiver Pasta-Genuss
         </h1>
 
         <!-- translation key 10 -->
         <p
-          class="w-[250px] md:w-[300px] lg:w-full mx-auto lg:text-2xl text-center pt-5"
+          class="w-[250px] md:w-[400px] lg:w-[480px] mx-auto lg:text-2xl text-center pt-5"
         >
           Entdecke mit Barilla Al Bronzo deine Lieblingsrezepte wieder oder
           probiere neue, kreative Rezepte aus.
@@ -374,12 +379,15 @@
       <!-- video carousel -->
       <div>
         <!-- translation key 11 -->
-        <h1 class="text-center uppercase">
+        <h1
+          class="w-[330px] md:w-[400px] lg:w-[500px] xl:w-[660px] mx-auto text-center uppercase"
+        >
           LERNE VOM STERNE-KOCH HÖCHSTPERSÖNLICH
-          <!-- <h1 class="text-center">A MICHELIN-STARRED CHEF</h1> -->
         </h1>
         <!-- translation key 12 -->
-        <p class="lg:text-2xl w-[300px] lg:w-full mx-auto text-center pt-5">
+        <p
+          class="lg:text-2xl w-[320px] md:w-[540px] lg:w-[660px] mx-auto text-center pt-5"
+        >
           Lass dich inspirieren! Sternekoch Davide Oldani zeigt dir seine
           Barilla Al Bronzo Rezepte. Erlebe dein außergewöhnliches kulinarisches
           Erlebnis zuhause.
