--- a/src/de-launch.html
+++ b/src/de-launch.html
@@ -51,7 +51,7 @@
         <div class="flex flex-col justify-center">
           <!-- translation key 1 -->
           <h1
-            class="w-[230px] md:w-[450px] xl:w-[480px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[80px] text-center uppercase pt-12 sm:pt-24 md:pt-12 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
+            class="w-[280px] md:w-[550px] xl:w-[580px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[80px] text-center uppercase pt-24 sm:pt-24 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
           >
             Die italienische Art, Sauce aufzunehmen.
           </h1>
@@ -112,7 +112,7 @@
           Perfekte Saucenhaftung
         </h1>
         <p
-          class="w-[294px] sm:w-[400px] md:w-full mx-auto lg:text-2xl text-center pt-5"
+          class="w-[294px] sm:w-[400px] md:w-[470px] lg:w-[530px] xl:w-[700px] mx-auto lg:text-2xl text-center pt-5"
         >
           Unsere Barilla Al Bronzo Pasta wird dank jahrzehnte langer Erfahrung
           mit unserem exklusiven Bronze-Verfahren hergestellt. Dadurch erhält
@@ -120,7 +120,7 @@
           perfekt aufnimmt.
         </p>
         <p
-          class="w-[294px] sm:w-[400px] md:w-[470px] lg:w-[430px] xl:w-[430px] mx-auto lg:text-2xl text-center"
+          class="w-[294px] sm:w-[400px] md:w-[470px] lg:w-[530px] xl:w-[700px] mx-auto lg:text-2xl text-center pt-5"
         >
           Die sorgfältig ausgewählte, hochwertige Hartweizenmischung verleiht
           unserer Al Bronzo Pasta den vollmundigen Geschmack.
@@ -191,7 +191,7 @@
 
         <!-- translation key 6 -->
         <p
-          class="w-[328px] md:w-[400px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
+          class="w-[328px] md:w-[470px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
         >
           Jeden Moment geniessen und die einfachen Freuden des Lebens schätzen -
           das ist italienische Lebensphilosophie.
@@ -204,7 +204,7 @@
           />
         </div>
         <p
-          class="w-[328px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-6 pt-12"
+          class="w-[328px] md:w-[470px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-6 pt-12"
         >
           Erlebe die "italienischen Art" und geniesse deine Pastasaucen bis zum
           letzten Tropfen dank Barilla Al Bronzo.
@@ -216,12 +216,14 @@
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="custom-container">
         <!-- translation key 7 -->
-        <h1 class="w-full mx-auto text-center uppercase">
+        <h1
+          class="w-[310px] md:w-[400px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+        >
           Italienische Tradition trifft auf Innovation
         </h1>
         <!-- translation key 8 -->
         <p
-          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] md:w-[500px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die neue 500g Packung im edlen Design hebt die besondere Qualität von
           Barilla Al Bronzo hervor und unterstreicht die perfekte Saucenhaftung.
@@ -250,20 +252,20 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[15%] lg:h-[20%] -top-[110px] md:-top-[100px] lg:-top-[140px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
         <!-- translation key 9 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="w-[300px] sm:w-[380px] lg:w-[500px] xl:w-[680px] mx-auto text-center uppercase"
         >
           VERSCHIEDENE FORMEN FÜR JEDEN GESCHMACK
         </h1>
         <!-- translation key 10 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[380px] md:w-[400px] lg:w-[570px] xl:w-[580px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die Pasta-Formen von Al Bronzo wurden von unseren Experten mit
           sorgfalt kreiert für ein intensives gastronomisches Erlebnis zu Hause.
@@ -448,7 +450,7 @@
 
         <!-- translation key 12 -->
         <p
-          class="max-w-[312px] md:max-w-[400px] lg:max-w-[500px] xl:max-w-[690px] text-base md:text-lg lg:text-xl mx-auto"
+          class="max-w-[330px] md:max-w-[500px] lg:max-w-[570px] text-base md:text-lg lg:text-xl mx-auto"
         >
           Der mit einem Michelin-Stern ausgezeichnete Sterne-Koch Davide Oldani,
           der auch für die "Pop Cuisine" bekannt ist, veredelt jedes Gericht mit
@@ -463,13 +465,15 @@
       <!-- video carousel -->
       <div>
         <!-- translation key 13 -->
-        <h1 class="w-[300px] md:w-full mx-auto text-center uppercase">
+        <h1
+          class="w-[330px] md:w-[400px] lg:w-[500px] xl:w-[660px] mx-auto text-center uppercase"
+        >
           LERNE VOM STERNE-KOCH HÖCHSTPERSÖNLICH
         </h1>
 
         <!-- translation key 14 -->
         <p
-          class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[500px] mx-auto text-center pt-5"
+          class="lg:text-2xl w-[320px] md:w-[400px] lg:w-[500px] mx-auto text-center pt-5"
         >
           Erlebe unsere Barilla Al Bronzo-Rezepte von Sterne-Koch Oldani: Für
           kulinarischen Genuss der Extraklasse.
@@ -694,13 +698,13 @@
       <!-- img + text -->
       <div class="custom-container mt-8 md:mt-10 lg:mt-12">
         <!-- translation key 15 -->
-        <h1
-          class="w-[250px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[328px] md:w-full mx-auto text-center uppercase">
           Intensiver Pasta-Genuss
         </h1>
         <!-- translation key 16 -->
-        <p class="w-[260px] md:w-full mx-auto lg:text-2xl text-center pt-6">
+        <p
+          class="w-[250px] md:w-[400px] lg:w-[480px] mx-auto lg:text-2xl text-center pt-5"
+        >
           Entdecke mit Barilla Al Bronzo deine Lieblingsrezepte wieder oder
           probiere neue, kreative Rezepte aus.
         </p>
