austria teaser and launch page responsivness complete

--- a/src/at-at.html
+++ b/src/at-at.html
@@ -39,7 +39,7 @@
       <div class="custom-container">
         <!-- logo -->
         <div>
-          <div class="flex justify-center lg:mt-6 bronzo-logo">
+          <div class="flex justify-center mt-6 bronzo-logo">
             <img src="./assets/images/Al-Bronzo.png" class="w-44 h-auto" />
           </div>
         </div>
@@ -48,14 +48,14 @@
         <div class="flex flex-col justify-center mt-9">
           <!-- translation key 1 -->
           <h1
-            class="w-[328px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
+            class="w-[310px] md:w-[400px] lg:w-[530px] xl:w-[720px] xl:leading-[77px] mx-auto text-center uppercase"
           >
             EINE PASTA, DIE SAUCE LIEBT - FÜR ALLE, DIE PASTA LIEBEN
           </h1>
 
           <!-- translation key 2 -->
           <p
-            class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-5"
+            class="w-[310px] md:w-[400px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-5"
           >
             Barilla Al Bronzo fängt die Sauce bis zum letzten Tropfen ein, für
             ein außergewöhnliches Geschmackserlebnis.
@@ -82,13 +82,15 @@
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="custom-container">
         <!-- translation key 3 -->
-        <h1 class="w-full mx-auto text-center uppercase">
+        <h1
+          class="w-[300px] md:w-[400px] lg:w-[500px] xl:w-[650px] mx-auto text-center uppercase"
+        >
           Italienische Tradition trifft auf Innovation
         </h1>
 
         <!-- translation key 4 -->
         <p
-          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[300px] md:w-[530px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die neue 500g Packung im edlen Design hebt die besondere Qualität von
           Barilla Al Bronzo hervor und unterstreicht die perfekte Saucenhaftung.
@@ -117,21 +119,21 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[20%] md:h-[15%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[190px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
         <!-- translation key 5 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="w-[300px] md:w-[380px] lg:w-[500px] xl:w-[670px] mx-auto text-center uppercase"
         >
           VERSCHIEDENE FORMEN FÜR JEDEN GESCHMACK
         </h1>
 
         <!-- translation key 6 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[410px] md:w-[450px] lg:w-[630px] xl:w-[660px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die verschiedenen Sorten wurden von unseren Experten mit Sorgfalt
           kreiert. So eignet sich jede Pasta-Form auf Grund der perfekten
@@ -334,7 +336,7 @@
 
         <!-- translation key 8 -->
         <p
-          class="w-[312px] sm:w-[400px] md:w-[500px] lg:w-[600px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[312px] sm:w-[400px] md:w-[630px] lg:w-[760px] lg:text-2xl mx-auto text-center pt-5"
         >
           Dank jahrzehntelanger Erfahrung verleiht unser traditionelles
           Bronze-Herstellungsverfahren der Barilla Al Bronzo Pasta eine intensiv
@@ -351,14 +353,14 @@
       <div class="custom-container">
         <!-- translation key 9 -->
         <h1
-          class="w-[328px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
+          class="w-[270px] md:w-[370px] lg:w-full mx-auto text-center uppercase"
         >
           EIN GENUSS FÜR AUGEN UND GAUMEN
         </h1>
 
         <!-- translation key 10 -->
         <p
-          class="w-[250px] md:w-[300px] lg:w-full mx-auto lg:text-2xl text-center pt-5"
+          class="w-[290px] md:w-[300px] lg:w-full mx-auto lg:text-2xl text-center pt-5"
         >
           Entdecke mit Barilla Al Bronzo klassische und kreative Rezepte.
         </p>
@@ -374,12 +376,15 @@
       <!-- video carousel -->
       <div>
         <!-- translation key 11 -->
-        <h1 class="text-center uppercase">
+        <h1
+          class="w-[330px] md:w-[400px] lg:w-[500px] xl:w-[660px] mx-auto text-center uppercase"
+        >
           LERNE VOM STERNE-KOCH HÖCHSTPERSÖNLICH
-          <!-- <h1 class="text-center">A MICHELIN-STARRED CHEF</h1> -->
         </h1>
         <!-- translation key 12 -->
-        <p class="lg:text-2xl w-[300px] lg:w-full mx-auto text-center pt-5">
+        <p
+          class="lg:text-2xl w-[300px] md:w-[450px] lg:w-[550px] xl:w-[650px] mx-auto text-center pt-5"
+        >
           Lass dich inspirieren! Sternekoch Davide Oldani zeigt dir seine
           Barilla Al Bronzo Rezepte. Erlebe dein aussergewöhnliches
           kulinarisches Erlebnis zuhause.
