--- a/src/de-launch.html
+++ b/src/de-launch.html
@@ -106,9 +106,7 @@
     >
       <div>
         <!-- translation key 2 -->
-        <h1
-          class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[260px] sm:w-full mx-auto text-center uppercase">
           Perfekte Saucenhaftung
         </h1>
         <p
