--- a/src/at-launch.html
+++ b/src/at-launch.html
@@ -51,14 +51,10 @@
         <div class="flex flex-col justify-center">
           <!-- translation key 1 -->
           <h1
-            class="w-[230px] md:w-[450px] xl:w-[480px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[80px] text-center uppercase pt-12 sm:pt-24 md:pt-12 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
+            class="w-[300px] md:w-[550px] xl:w-[580px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[90px] text-center uppercase pt-24 sm:pt-36 md:pt-16 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
           >
             Die italienische Art, Sauce aufzunehmen.
           </h1>
-          <p>
-            Stell dir vor: Ein köstlich duftender Teller Barilla Al Bronzo
-            Pasta, die die Sauce bis zum letzten Tropfen aufnimmt
-          </p>
         </div>
       </div>
 
@@ -110,13 +106,11 @@
     >
       <div>
         <!-- translation key 2 -->
-        <h1
-          class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[260px] sm:w-full mx-auto text-center uppercase">
           Perfekte Saucenhaftung
         </h1>
         <p
-          class="w-[294px] sm:w-[400px] md:w-full mx-auto lg:text-2xl text-center pt-5"
+          class="w-[294px] sm:w-[430px] md:w-[530px] lg:w-[650px] xl:w-[750px] mx-auto lg:text-2xl text-center pt-5"
         >
           Dank jahrzehntelanger Erfahrung und mit unsem traditionellem
           Bronze-Herstellungsverfahren erhält die Barilla Al Bronzo Pasta eine
@@ -174,7 +168,9 @@
           Die Pasta, die Scarpetta kann
         </h1>
         <!-- translation key 4   -->
-        <p class="w-[312px] sm:w-[400px] md:w-full mx-auto text-center pt-5">
+        <p
+          class="w-[290px] sm:w-[400px] md:w-full mx-auto text-center lg:text-2xl pt-5"
+        >
           Erlebe mit Barilla Al Bronzo die italienische Art, Sauce auzunehmen
         </p>
       </div>
@@ -184,14 +180,14 @@
       <div class="custom-container pt-16 pb-8">
         <!-- translation key 5 -->
         <h1
-          class="w-[300px] md:w-full lg:w-[500px] xl:w-[600px] mx-auto text-center uppercase"
+          class="w-[270px] md:w-full lg:w-[500px] xl:w-[600px] mx-auto text-center uppercase"
         >
           SCARPETTA? MEHR ALS NUR EINE GESTE
         </h1>
 
         <!-- translation key 6 -->
         <p
-          class="w-[328px] md:w-[400px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
+          class="w-[320px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-6"
         >
           In Italien ist es eine Philosophie, jeden Moment zu genießen und die
           einfachen Freuden des Lebens zu schätzen.
@@ -204,7 +200,7 @@
           />
         </div>
         <p
-          class="w-[328px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-6 pt-12"
+          class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-6 pt-12"
         >
           Probiere es mit der "italienischen Art" und geniesse deine Pastasaucen
           bis zum letzten Tropfen dank Barilla Al Bronzo.
@@ -221,7 +217,7 @@
         </h1>
         <!-- translation key 8 -->
         <p
-          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[300px] sm:w-[400px] md:w-[530px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die neue 500g Packung im edlen Design hebt die besondere Qualität von
           Barilla Al Bronzo hervor und unterstreicht die perfekte Saucenhaftung.
@@ -250,20 +246,20 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[140px] lg:-top-[190px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
         <!-- translation key 9 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="w-[300px] md:w-[370px] lg:w-[500px] xl:w-[680px] mx-auto text-center uppercase"
         >
           VERSCHIEDENE FORMEN FÜR JEDEN GESCHMACK
         </h1>
         <!-- translation key 10 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[420px] md:w-[450px] lg:w-[650px] xl:w-[750px] lg:text-2xl mx-auto text-center pt-5"
         >
           Die verschiedenen Sorten wurden von unseren Experten mit Sorgfalt
           kreiert. So eignet sich jede Pasta-Form auf Grund der perfekten
@@ -450,7 +446,7 @@
 
         <!-- translation key 12 -->
         <p
-          class="max-w-[312px] md:max-w-[400px] lg:max-w-[500px] xl:max-w-[690px] text-base md:text-lg lg:text-xl mx-auto"
+          class="max-w-[330px] md:max-w-[500px] lg:max-w-[570px] text-base md:text-lg lg:text-xl mx-auto"
         >
           Der mit einem Michelin-Stern ausgezeichnete Sterne-Koch Davide Oldani,
           der auch für die "Pop Cuisine" bekannt ist, veredelt jedes Gericht mit
@@ -465,13 +461,15 @@
       <!-- video carousel -->
       <div>
         <!-- translation key 13 -->
-        <h1 class="w-[300px] md:w-full mx-auto text-center uppercase">
+        <h1
+          class="w-[330px] md:w-[400px] lg:w-[500px] xl:w-[660px] mx-auto text-center uppercase"
+        >
           LERNE VOM STERNE-KOCH HÖCHSTPERSÖNLICH
         </h1>
 
         <!-- translation key 14 -->
         <p
-          class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[500px] mx-auto text-center pt-5"
+          class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[650px] mx-auto text-center pt-5"
         >
           Erlebe ein aussergewöhnliches kulinarisches Erlebnis bei dir zuhause.
           Sternekoch Davide Oldani zeigt dir Barilla Al Bronzo Rezepte zum
@@ -697,13 +695,13 @@
       <!-- img + text -->
       <div class="custom-container mt-8 md:mt-10 lg:mt-12">
         <!-- translation key 15 -->
-        <h1
-          class="w-[250px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[328px] md:w-full mx-auto text-center uppercase">
           Intensiver Pasta-Genuss
         </h1>
         <!-- translation key 16 -->
-        <p class="w-[260px] md:w-full mx-auto lg:text-2xl text-center pt-6">
+        <p
+          class="w-[290px] md:w-[400px] lg:w-[480px] mx-auto lg:text-2xl text-center pt-5"
+        >
           Entdecke mit Barilla Al Bronzo deine Lieblingsrezepte wieder oder
           probiere neue, kreative Rezepte aus.
         </p>
