spanish teaser and launch  page responsivness complete

--- a/src/es-es.html
+++ b/src/es-es.html
@@ -39,7 +39,7 @@
       <div class="custom-container">
         <!-- logo -->
         <div>
-          <div class="flex justify-center lg:mt-6 bronzo-logo">
+          <div class="flex justify-center mt-6 bronzo-logo">
             <img src="./assets/images/Al-Bronzo.png" class="w-44 h-auto" />
           </div>
         </div>
@@ -48,14 +48,14 @@
         <div class="flex flex-col justify-center mt-9">
           <!-- translation key 1 -->
           <h1
-            class="w-[328px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
+            class="w-[328px] sm:w-[480px] md:w-[580px] lg:w-[750px] xl:w-[820px] xl:leading-[77px] mx-auto text-center uppercase"
           >
             UNA PASTA QUE AMA LA SALSA, PARA LOS VERDADEROS AMANTES DE LA PASTA
           </h1>
 
           <!-- translation key 2 -->
           <p
-            class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-5"
+            class="w-[310px] md:w-[380px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-5"
           >
             Barilla Al Bronzo captura la salsa hasta la última gota, para una
             experiencia de sabor extraordinaria.
@@ -88,7 +88,7 @@
 
         <!-- translation key 4 -->
         <p
-          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[300px] md:w-[530px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Un nuevo paquete refinado de 500 gramos, diseñado para celebrar la
           calidad de Barilla Al Bronzo, enfatizando su extraordinario agarre de
@@ -118,21 +118,21 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[20%] md:h-[15%] lg:h-[25%] -top-[150px] md:-top-[100px] lg:-top-[180px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
         <!-- translation key 5 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="w-[250px] sm:w-[350px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           TODAS LAS FORMAS PARA CADA PALADAR
         </h1>
 
         <!-- translation key 6 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Su diseño, meticulosamente elaborado por nuestros expertos, hace que
           cada forma sea perfecta para una experiencia gastronómica única e
@@ -327,14 +327,14 @@
       <div class="relative z-10 text-white text-center">
         <!-- translation key 7 -->
         <h1
-          class="w-[260px] md:w-[370px] lg:w-[450px] xl:w-[550px] mx-auto text-center uppercase"
+          class="w-[260px] sm:w-[370px] md:w-[440px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           UN AGARRE EXTRAORDINARIO DE LA SALSA
         </h1>
 
         <!-- translation key 8 -->
         <p
-          class="w-[312px] sm:w-[400px] md:w-[500px] lg:w-[600px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[500px] lg:w-[700px] lg:text-2xl mx-auto text-center pt-5"
         >
           Con décadas de experiencia, nuestro tradicional método de corte con
           bronce le da a Barilla Al Bronzo una superficie rugosa y porosa que se
@@ -351,7 +351,7 @@
       <div class="custom-container">
         <!-- translation key 9 -->
         <h1
-          class="w-[328px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
+          class="w-[300px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
         >
           UN PLACER PARA LOS OJOS Y EL PALADAR
         </h1>
@@ -376,7 +376,9 @@
         <!-- translation key 11 -->
         <h1 class="text-center uppercase">APRENDELO DEL CHEF MISMO</h1>
         <!-- translation key 12 -->
-        <p class="lg:text-2xl w-[300px] lg:w-full mx-auto text-center pt-5">
+        <p
+          class="lg:text-2xl w-[300px] md:w-[400px] lg:w-[470px] mx-auto text-center pt-5"
+        >
           Recrea estas recetas de Barilla Al Bronzo por el Chef Oldani para una
           experiencia gastronómica elevada.
         </p>
