--- a/src/es-launch.html
+++ b/src/es-launch.html
@@ -51,14 +51,10 @@
         <div class="flex flex-col justify-center">
           <!-- translation key 1 -->
           <h1
-            class="w-[230px] md:w-[450px] xl:w-[480px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[80px] text-center uppercase pt-12 sm:pt-24 md:pt-12 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
+            class="w-[270px] md:w-[550px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[90px] text-center uppercase pt-24 sm:pt-24 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
           >
             CAPTURA LA SALSA A LA MANERA ITALIANA
           </h1>
-          <p>
-            Imagina esto: un plato humeante de pasta Barilla Al Bronzo,
-            capturando hasta la última gota de salsa.
-          </p>
         </div>
       </div>
 
@@ -111,12 +107,12 @@
       <div>
         <!-- translation key 2 -->
         <h1
-          class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
+          class="w-[260px] sm:w-[350px] md:w-[450px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           UN AGARRE EXTRAORDINARIO DE LA SALSA
         </h1>
         <p
-          class="w-[294px] sm:w-[400px] md:w-full mx-auto lg:text-2xl text-center pt-5"
+          class="w-[294px] sm:w-[430px] md:w-[540px] lg:w-[640px] mx-auto lg:text-2xl text-center pt-5"
         >
           Con décadas de experiencia, nuestro tradicional método de corte con
           bronce le da a Barilla Al Bronzo una superficie rugosa y porosa que se
@@ -124,12 +120,6 @@
           calidad, cuidadosamente seleccionado, aporta un sabor redondeado y
           ligeramente tostado, creando una experiencia verdaderamente elevada.
         </p>
-        <!-- <p
-          class="w-[294px] sm:w-[400px] md:w-[470px] lg:w-[430px] xl:w-[430px] mx-auto lg:text-2xl text-center"
-        >
-          gives Barilla Al Bronzo a rough and porous surface that effortlessly
-          clings to every drop of sauce.
-        </p> -->
       </div>
 
       <!-- right absolute img -->
@@ -179,7 +169,9 @@
           LA PASTA QUE HACE 'LA SCARPETTA'
         </h1>
         <!-- translation key 4   -->
-        <p class="w-[312px] sm:w-[400px] md:w-full mx-auto text-center pt-5">
+        <p
+          class="lg:text-2xl w-[312px] sm:w-[400px] md:w-full mx-auto text-center pt-5"
+        >
           Experimenta la forma italiana de capturar cada gota de salsa con
           Barilla Al Bronzo.
         </p>
@@ -189,15 +181,13 @@
     <section class="bg-red">
       <div class="custom-container pt-16 pb-8">
         <!-- translation key 5 -->
-        <h1
-          class="w-[300px] md:w-full lg:w-[500px] xl:w-[600px] mx-auto text-center uppercase"
-        >
+        <h1 class="w-[250px] md:w-full mx-auto text-center uppercase">
           SCARPETTA? ES MÁS QUE UN GESTO
         </h1>
 
         <!-- translation key 6 -->
         <p
-          class="w-[328px] md:w-[400px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
+          class="w-[300px] md:w-[360px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
         >
           "En Italia, es la filosofía de saborear cada momento y apreciar los
           placeres simples de la vida.
@@ -210,7 +200,7 @@
           />
         </div>
         <p
-          class="w-[328px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-6 pt-12"
+          class="w-[300px] md:w-[360px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-6 pt-12"
         >
           Abraza la «manera italiana» y captura hasta la última gota de salsa
           con Barilla Al Bronzo."
@@ -257,20 +247,20 @@
     <section class="relative bg-bronze-200">
       <!-- clippy path div -->
       <div
-        class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        class="degree-section-clippy w-full h-[20%] md:h-[15%] lg:h-[25%] -top-[150px] md:-top-[100px] lg:-top-[190px] absolute bg-bronze-200 z-40"
       ></div>
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
         <!-- translation key 9 -->
         <h1
-          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
+          class="w-[250px] sm:w-[300px] md:w-[350px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           TODAS LAS FORMAS PARA CADA PALADAR
         </h1>
         <!-- translation key 10 -->
         <p
-          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[630px] lg:text-2xl mx-auto text-center pt-5"
         >
           Su diseño, meticulosamente elaborado por nuestros expertos, hace que
           cada forma sea perfecta para una experiencia gastronómica única e
@@ -456,7 +446,7 @@
 
         <!-- translation key 12 -->
         <p
-          class="max-w-[312px] md:max-w-[400px] lg:max-w-[500px] xl:max-w-[690px] text-base md:text-lg lg:text-xl mx-auto"
+          class="w-[312px] md:w-[400px] lg:w-[580px] text-base md:text-lg lg:text-xl mx-auto"
         >
           El chef con estrellas Michelin y el genio detrás de la cocina pop,
           Davide Oldani, eleva cualquier plato con su pasión, talento y
@@ -470,13 +460,13 @@
       <!-- video carousel -->
       <div>
         <!-- translation key 13 -->
-        <h1 class="w-[300px] md:w-full mx-auto text-center uppercase">
+        <h1 class="w-full mx-auto text-center uppercase">
           APRENDELO DEL CHEF MISMO
         </h1>
 
         <!-- translation key 14 -->
         <p
-          class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[500px] mx-auto text-center pt-5"
+          class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[470px] mx-auto text-center pt-5"
         >
           Recrea estas recetas de Barilla Al Bronzo por el Chef Oldani para una
           experiencia gastronómica elevada.
@@ -702,7 +692,7 @@
       <div class="custom-container mt-8 md:mt-10 lg:mt-12">
         <!-- translation key 15 -->
         <h1
-          class="w-[250px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
+          class="w-[250px] md:w-[370px] lg:w-[450px] xl:w-[550px] mx-auto text-center uppercase"
         >
           UN PLACER PARA LOS OJOS Y EL PALADAR
         </h1>
